--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,10 @@
     "angular-ui-router": "~0.2",
     "angular-file-upload": "1.1.5",
     "angular-messages": "~1.3.17",
-    "owasp-password-strength-test": "~1.3.0"
+    "owasp-password-strength-test": "~1.3.0",
+    "angular-toastr": "^2.1.1",
+    "angular-aside-menu": "^1.5.1",
+    "opentok-angular": "^2.1.0"
   },
   "resolutions": {
     "angular": "~1.3"
