--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "owasp-password-strength-test": "~1.3.0",
     "angular-toastr": "^2.1.1",
     "angular-aside-menu": "^1.5.1",
-    "opentok-angular": "^2.1.0"
+    "opentok-angular": "^2.1.0",
+    "angular-ui-select": "^0.19.8"
   },
   "resolutions": {
     "angular": "~1.3"
