--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "npm": "3.5.2"
   },
   "scripts": {
-    "start": "grunt",
-    "test": "grunt test",
+    "start": "gulp",
+    "test": "gulp test",
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
