--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm": "3.5.2"
   },
   "scripts": {
-    "start": "gulp",
+    "start": "gulp prod",
     "test": "gulp test",
     "postinstall": "bower install --config.interactive=false && gulp build"
   },
