--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-aside-menu": "^1.5.1",
     "opentok-angular": "^2.1.0",
     "angular-ui-select": "^0.19.8",
-    "textAngular": "^1.5.16"
+    "textAngular": "^1.5.16",
+    "moment": "^2.21.0"
   },
   "resolutions": {
     "angular": "~1.3"
