--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "connect-mongo": "~0.8.1",
     "consolidate": "~0.13.1",
     "cookie-parser": "^1.3.2",
+    "coveralls": "^2.11.4",
     "crypto": "0.0.3",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
@@ -40,31 +41,6 @@
     "glob": "^5.0.13",
     "grunt": "0.4.5",
     "grunt-cli": "~0.1.13",
-    "helmet": "~0.9.1",
-    "jasmine-core": "^2.3.4",
-    "lodash": "^3.10.0",
-    "method-override": "^2.3.3",
-    "mocha": "~1.20.0",
-    "mongoose": "~4.2.3",
-    "morgan": "^1.6.1",
-    "multer": "~1.0.5",
-    "nodemailer": "^1.4.0",
-    "opentok": "^2.6.1",
-    "owasp-password-strength-test": "^1.3.0",
-    "passport": "~0.2.2",
-    "passport-facebook": "^2.0.0",
-    "passport-github": "~0.1.5",
-    "passport-google-oauth": "~0.2.0",
-    "passport-linkedin": "~0.1.3",
-    "passport-local": "^1.0.0",
-    "passport-paypal-openidconnect": "^0.1.1",
-    "passport-twitter": "^1.0.2",
-    "phantomjs": ">=1.9.0",
-    "serve-favicon": "^2.3.0",
-    "socket.io": "^1.3.7",
-    "swig": "^1.4.2",
-    "validator": "^3.41.2",
-    "coveralls": "^2.11.4",
     "grunt-concurrent": "^2.0.0",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-csslint": "~0.4.0",
@@ -104,6 +80,8 @@
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "helmet": "~0.9.1",
+    "jasmine-core": "^2.3.4",
     "karma": "~0.12.37",
     "karma-chrome-launcher": "~0.2.0",
     "karma-coverage": "~0.4.2",
@@ -112,10 +90,32 @@
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "~0.2.0",
     "load-grunt-tasks": "^3.2.0",
+    "lodash": "^3.10.0",
+    "method-override": "^2.3.3",
+    "mocha": "~1.20.0",
     "mock-fs": "~3.4.0",
+    "mongoose": "~4.2.3",
+    "morgan": "^1.6.1",
+    "multer": "~1.0.5",
+    "nodemailer": "^1.4.0",
+    "opentok": "^2.6.2",
+    "owasp-password-strength-test": "^1.3.0",
+    "passport": "~0.2.2",
+    "passport-facebook": "^2.0.0",
+    "passport-github": "~0.1.5",
+    "passport-google-oauth": "~0.2.0",
+    "passport-linkedin": "~0.1.3",
+    "passport-local": "^1.0.0",
+    "passport-paypal-openidconnect": "^0.1.1",
+    "passport-twitter": "^1.0.2",
+    "phantomjs": ">=1.9.0",
     "run-sequence": "^1.1.1",
+    "serve-favicon": "^2.3.0",
     "should": "^7.0.1",
-    "supertest": "^1.0.1"
+    "socket.io": "^1.3.7",
+    "supertest": "^1.0.1",
+    "swig": "^1.4.2",
+    "validator": "^3.41.2"
   },
   "devDependencies": {
     "coveralls": "^2.11.4",
